[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Items/prato nao saudavel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Items/prato saudavel.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TableInt.gd" type="Script" id=3]
[ext_resource path="res://Assets/Items/close.png" type="Texture" id=4]
[ext_resource path="res://Assets/Items/close_hover.png" type="Texture" id=5]

[node name="TableInt" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -4.0
margin_right = 647.0
margin_bottom = 377.0
color = Color( 0, 0, 0, 0.627451 )

[node name="HealthyButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 123.0
margin_top = 113.0
margin_right = 271.0
margin_bottom = 179.0

[node name="NotHealthyButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 368.0
margin_top = 108.0
margin_right = 517.0
margin_bottom = 180.0

[node name="Healthy" type="Sprite" parent="."]
position = Vector2( 198, 146 )
scale = Vector2( 0.558366, 0.669811 )
texture = ExtResource( 2 )

[node name="NotHealthy" type="Sprite" parent="."]
position = Vector2( 473, 156 )
scale = Vector2( 0.783019, 0.811558 )
texture = ExtResource( 1 )

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 596.0
margin_top = 15.0
margin_right = 636.0
margin_bottom = 55.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[connection signal="pressed" from="HealthyButton" to="." method="_on_HealthyButton_pressed"]
[connection signal="pressed" from="NotHealthyButton" to="." method="_on_NotHealthyButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
